--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "on_boarding" "\0"
+            VALUE "FileDescription", "course" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "on_boarding" "\0"
+            VALUE "InternalName", "course" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2023 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "on_boarding.exe" "\0"
-            VALUE "ProductName", "on_boarding" "\0"
+            VALUE "OriginalFilename", "course.exe" "\0"
+            VALUE "ProductName", "course" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
